--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Abstraction dsgn</title>
   </head>
   <body>
-    <p>Abstraction dsgn</p>
+    <h1>Abstraction dsgn</h1>
   </body>
 </html>
