--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no' />
     <title>Abstraction dsgn</title>
     <style>
+      body {
+        font-family: "Century Gothic", Helvetica, Verdana, sans-serif;
+      }
+      h1 {
+        text-align: center;
+      }
       svg {
         height: 50%;
         width: auto;
