--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Abstraction dsgn</title>
     <style>
       body {
-        font-family: Helvetica, "Century Gothic", Verdana, sans-serif;
+        font-family: "Proxima Nova", Helvetica, "Century Gothic", Verdana, sans-serif;
       }
       h1 {
         text-align: center;
