--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
       .cont {
         position: absolute;
         bottom: 0;
-        width: 100%;
+        left: 0;
+        right: 0;
         text-align: center;
+      }
+      .cont a {
+        text-decoration: none;
+        color: inherit;
       }
     </style>
   </head>
