--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         transform: translate(-50%,-50%);
       }
       .cont {
+        writing-mode: vertical-rl;
         position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        text-align: center;
+        bottom: 1em;
+        right: 0.5em;
+        text-align: right;
       }
       .cont a {
         text-decoration: none;
