--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ permalink: /404.html
     <style>
       html { font-size:100%; box-sizing:border-box; scroll-behavior:smooth; }
       *, *:before, *:after { margin:0; padding:0; box-sizing:inherit; }
-      body { display:flex; justify-content:center; align-items:center; position:relative; }
+      body { display:flex; justify-content:center; align-items:center; }
       h1 {
         text-align: center;
       }
