--- a/demo/typo.html
+++ b/demo/typo.html
@@ -47,7 +47,7 @@
     to { opacity:1; }
   }
   .selekta { display:flex; }
-  .selekta label { display:flex; flex-direction:column; flex-basis:20%; align-items:center; }
+  .selekta label { display:flex; flex-direction:column; flex-basis:20%; align-items:center; padding-top:0.75rem; }
   .selekta label:has(input:checked) { color:#f00; }
   .selekta input[type=radio] { border-radius:50%; margin:0.2em; }
   input[type=radio]:focus { outline:none; }
