--- a/404.html
+++ b/404.html
@@ -20,6 +20,7 @@ permalink: /404.html
         left: 20%;
         right: 50%;
         padding-top: 1.5rem;
+        pointer-events: none;
       }
       a { 
         color: inherit;
