--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@ permalink: /404.html
     <meta charset='utf-8' />
     <meta http-eqiv='x-ua-compatible' content='ie=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no' />
-    <title>Abstraction dsgn</title>
+    <title>404: Page not found</title>
     <style>
       html { font-size:100%; box-sizing:border-box; scroll-behavior:smooth; }
       *, *:before, *:after { margin:0; padding:0; box-sizing:inherit; }
