Adde meta description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset='utf-8' />
     <meta http-eqiv='x-ua-compatible' content='ie=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no' />
-    <title>Abstraction dsgn</title>
+    <title>Abstraction dsgn: Superior, affordable websites</title>
+    <meta name='description' content='We create websites for small business, non-profits and startups. Contact us, and let’s work on your new project together.' />
     <style>
       body {
         font-family: "Proxima Nova", Helvetica, "Century Gothic", Verdana, sans-serif;
