Added meta description

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no' />
     <title>Abstraction dsgn: Superior, affordable websites</title>
     <meta name='description' content='We create websites for small business, non-profits and startups. Contact us, and let’s work on your new project together.' />
+    <meta name='keywords' content='Web design and development' />
     <style>
       body {
         font-family: "Proxima Nova", Helvetica, "Century Gothic", Verdana, sans-serif;
