--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         color: inherit;
       }
     </style>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GRSWT0Y9JX"></script>
+    <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-GRSWT0Y9JX');</script>
   </head>
   <body>
     <h1>Abstraction dsgn</h1>
