--- a/404.html
+++ b/404.html
@@ -40,6 +40,8 @@ permalink: /404.html
         text-decoration: none;
       }
     </style>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GRSWT0Y9JX"></script>
+    <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-GRSWT0Y9JX');</script>
     <script type='application/ld+json'> 
       {
         "@context": "http://www.schema.org",
@@ -47,7 +49,7 @@ permalink: /404.html
         "name": "Abstraction dsgn",
         "url": "https://abstractiondsgn.com",
         "logo": { "@type":"ImageObject", "url":"https://abstractiondsgn.com/images/logo.png", "width":"271", "height":"271" },
-        "description": "Abstraction dsgn builds better web experiences. We create websites for small businesses and startups.",
+        "description": "We create websites for small business, non-profits and startups. Contact us, and let’s work on your new project together.",
         "contactPoint": {
           "@type": "ContactPoint",
           "telephone": "+256(0)761 746802",
