--- a/index.html
+++ b/index.html
@@ -39,6 +39,33 @@
     </style>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GRSWT0Y9JX"></script>
     <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-GRSWT0Y9JX');</script>
+    <script type='application/ld+json'> 
+      {
+        "@context": "http://www.schema.org",
+        "@type": "Organization",
+        "name": "Abstraction dsgn",
+        "url": "https://abstractiondsgn.com",
+        "logo": { "@type":"ImageObject", "url":"https://abstractiondsgn.com/images/logo.png", "width":"271", "height":"271" },
+        "description": "We create websites for small business, non-profits and startups. Contact us, and let’s work on your new project together.",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+256(0)761 746802",
+          "contactType": "customer support"
+        },
+        "openingHoursSpecification": [
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+            "opens":"08:00", "closes":"17:00"
+          },
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": "Saturday",
+            "opens":"08:00", "closes":"14:00"
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
     <h1>Abstraction dsgn</h1>
