--- a/demo/typo.html
+++ b/demo/typo.html
@@ -87,6 +87,9 @@
   }
 </style>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GRSWT0Y9JX"></script>
+<script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-GRSWT0Y9JX');</script>
+
 <div class="selekta">
   <label for="style1">Style 1<input type="radio" id="style1" name="radios" /></label>
   <label for="style2">Style 2<input type="radio" id="style2" name="radios" /></label>
