--- a/demo/typo.html
+++ b/demo/typo.html
@@ -90,7 +90,9 @@
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-GRSWT0Y9JX"></script>
 <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-GRSWT0Y9JX');</script>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-W85LR9KL');</script>
 
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W85LR9KL" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>  
 <div class="selekta">
   <label for="style1">Style 1<input type="radio" id="style1" name="radios" /></label>
   <label for="style2">Style 2<input type="radio" id="style2" name="radios" /></label>
